got references working

--- a/thesis.tex
+++ b/thesis.tex
@@ -383,11 +383,11 @@ a&b&c\\
 
 \appendix
 % \Blinddocument
+\bibliographystyle{plain} % Or whatever style you want like plainnat
+
+\bibliography{thesis}
 
 % Stuff at the end of the dissertation goes in the back matter
 \backmatter
-\bibliographystyle{plain} % Or whatever style you want like plainnat
-
-\bibliography{swordbox/paper, rcuckoo/paper}
 
 \end{document}
