--- a/thesis.bib
+++ b/thesis.bib
@@ -1663,3 +1663,38 @@
 	keywords     = {energy efficiency, memory disaggregation, virtualization},
 	numpages     = 12
 }
+
+@inproceedings{eris,
+author = {Li, Jialin and Michael, Ellis and Ports, Dan R. K.},
+title = {Eris: Coordination-Free Consistent Transactions Using In-Network Concurrency Control},
+year = {2017},
+isbn = {9781450350853},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3132747.3132751},
+doi = {10.1145/3132747.3132751},
+abstract = {Distributed storage systems aim to provide strong consistency and isolation guarantees on an architecture that is partitioned across multiple shards for scalability and replicated for fault tolerance. Traditionally, achieving all of these goals has required an expensive combination of atomic commitment and replication protocols -- introducing extensive coordination overhead. Our system, Eris, takes a different approach. It moves a core piece of concurrency control functionality, which we term multi-sequencing, into the datacenter network itself. This network primitive takes on the responsibility for consistently ordering transactions, and a new lightweight transaction protocol ensures atomicity.The end result is that Eris avoids both replication and transaction coordination overhead: we show that it can process a large class of distributed transactions in a single round-trip from the client to the storage system without any explicit coordination between shards or replicas in the normal case. It provides atomicity, consistency, and fault tolerance with less than 10\% overhead -- achieving throughput 3.6-35x higher and latency 72-80\% lower than a conventional design on standard benchmarks.},
+booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles},
+pages = {104–120},
+numpages = {17},
+keywords = {network multi-sequencing, in-network concurrency control, distributed transactions},
+location = {Shanghai, China},
+series = {SOSP '17}
+}
+
+@inproceedings {nopaxos,
+author = {Jialin Li and Ellis Michael and Naveen Kr. Sharma and Adriana Szekeres and Dan R. K. Ports},
+title = {Just Say {NO} to Paxos Overhead: Replacing Consensus with Network Ordering},
+booktitle = {12th USENIX Symposium on Operating Systems Design and Implementation (OSDI 16)},
+year = {2016},
+isbn = {978-1-931971-33-1},
+address = {Savannah, GA},
+pages = {467--483},
+url = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/li},
+publisher = {USENIX Association},
+month = nov
+}
+
+  
+
+
